<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".currentDeals">

    <ScrollView
        android:layout_width="394dp"
        android:layout_height="0dp"
        android:background="#2F5652"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2F5652"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="293dp"
                android:contentDescription="@string/img3"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/plans_image"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/currentDeals"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:clickable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/switchFrom"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img2"
                app:srcCompat="@drawable/phone1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:clickable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/existingCustomerDeal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:clickable="false"
                android:gravity="bottom|center"
                android:inputType="none"
                android:text="@string/familySelect"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="214dp"
                android:contentDescription="@string/img1"
                app:srcCompat="@drawable/girl_phone" />

            <Button
                android:id="@+id/idBtnViewPhones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D69476"
                android:gravity="center"
                android:text="@string/choosePhone"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="3sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/idBtnViewPlans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D69476"
                android:gravity="center"
                android:text="@string/plan"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="3sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/idBtnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D69476"
                android:gravity="center"
                android:text="@string/btnHome"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>